# commonplus

./: .gitignore  README.md
concepts/: common_concepts.hpp  containers_concepts.hpp
helpers/: scopedguards.hpp  uni_ctor.hpp
linux/: executable.cpp  executable.hpp  fsutil.cpp  fsutil.hpp  process.cpp  process.hpp  utils.cpp  utils.hpp
macro/: ufw.hpp
messaging/: message.hpp
network/: ihandler.hpp  sockutils.cpp  sockutils.hpp  tcpclient.cpp  tcpclient.hpp  tcpserver.cpp  tcpserver.hpp  threadpool.cpp  threadpool.hpp
projects/app_cmake/: .clang-format  .gitignore  CMakeLists.txt  Info.plist.in
projects/app_cmake/cmake/: MapFileSupport.cmake
projects/app_cmake/src/: app.h  main.cpp
projects/app_cmake/src/sources/: emptyclass.cpp  emptyclass.hpp  pureccode.c  pureccode.h
projects/app_cmake/sub/: lib.h
projects/app_cmake/subLib/: CMakeLists.txt  lib.cpp
projects/app_cmake/tests/: CMakeLists.txt  test_app.cpp
projects/shared_lib_cmake/: CMakeLists.txt  main.cpp
projects/shared_lib_cmake/include/: functions.hpp  headeronly.hpp  myclass.hpp
projects/shared_lib_cmake/src/: functions.cpp  myclass.cpp
projects/shared_lib_cmake/src/include/: internal.hpp
support/: buffer_types.hpp  ip4types.cpp  ip4types.h
